# deepy

./: .gitignore  AGENTS.md  README.md  README.zh-CN.md  index.html  pyproject.toml  site.css
.github/workflows/: pages.yml  publish.yml
docs/: deepseek-cache.md  deepy-ui-and-tui.md  deepy-ui-and-tui.zh-CN.md  mcp.md  mcp.zh-CN.md  subagents.md  subagents.zh-CN.md  tui-next-version.md  tutorial-videos.md  tutorial-videos.zh-CN.md
openspec/changes/split-oversized-modules/: design.md  proposal.md  tasks.md
openspec/specs/agent-instructions/: spec.md
openspec/specs/agent-skills/: spec.md
openspec/specs/background-tasks/: spec.md
openspec/specs/code-maintainability/: spec.md
openspec/specs/configuration/: spec.md
openspec/specs/deepseek-provider/: spec.md
openspec/specs/experimental-textual-tui/: spec.md
openspec/specs/file-tools-v3/: spec.md
openspec/specs/future-capabilities/: spec.md
openspec/specs/image-understanding-input/: spec.md
openspec/specs/input-suggestions/: spec.md
openspec/specs/mcp-support/: spec.md
openspec/specs/product/: spec.md
openspec/specs/release-update/: spec.md
openspec/specs/runtime-environment/: spec.md
openspec/specs/session-context/: spec.md
openspec/specs/skill-market/: spec.md
openspec/specs/structured-apply-patch/: spec.md
openspec/specs/subagents/: spec.md
openspec/specs/system-audit/: spec.md
openspec/specs/terminal-ui/: spec.md
openspec/specs/todo-planning/: spec.md
openspec/specs/tools/: spec.md
openspec/specs/user-documentation/: spec.md
openspec/specs/website-installation/: spec.md
scripts/: probe_agents_sdk_cache.py  probe_deepseek_cache.py
src/deepy/: __init__.py  audit.py  background_tasks.py  cli.py  errors.py  format_tokens.py  input_suggestions.py  mcp.py  session_cost.py  skill_market.py  skills.py  status.py  subagents.py  todos.py  update_check.py  usage.py
src/deepy/config/: __init__.py  config_io.py  providers.py  schema.py  settings.py
src/deepy/data/: __init__.py
src/deepy/llm/: __init__.py  agent.py  cache_context.py  compaction.py  context.py  events.py  model_capabilities.py  multimodal.py  provider.py  replay.py  runner.py  runner_approvals.py  runner_errors.py  runner_interrupt.py  thinking.py
src/deepy/prompts/: __init__.py  compact.py  init_agents.py  rules.py  runtime_context.py  system.py  tool_docs.py
src/deepy/sessions/: __init__.py  index.py  jsonl.py  manager.py  session.py  store_helpers.py
src/deepy/tools/: __init__.py  agents.py  arg_repair.py  builtin.py  constants.py  file_state.py  media.py  mutation_policy.py  payload_parsing.py  result.py  schema_compat.py  search.py  (+8 more)
tests/: test_agent.py  test_app_state.py  test_ask_user_question.py  test_audit.py  test_audit_approval_picker.py  test_cache_context.py  test_cli.py  test_clipboard.py  test_compaction.py  test_context.py  test_errors.py  test_events.py  test_exit_summary.py  test_fixtures.py  test_input_suggestions.py  test_jsonl_session.py  test_loading_text.py  test_local_command.py  test_markdown.py  test_mcp.py  test_message_view.py  test_performance_paths.py  test_prompt_buffer.py  test_prompt_input.py  test_prompts.py  test_provider.py  test_replay.py  test_runner.py  test_session_cost.py  test_session_list.py  test_session_manager.py  test_session_picker.py  test_settings.py  test_shell_utils.py  test_skill_market.py  test_skill_picker.py  test_slash_commands.py  test_status.py  test_styles.py  test_subagents.py  (+11 more)
tests/architecture/: test_module_size.py
tests/audit/: test_audit.py
tests/background_tasks/: test_background_tasks.py
tests/cli/: test_cli.py
tests/config/: test_settings.py
tests/input_suggestions/: test_input_suggestions.py
tests/llm/: test_cache_context.py  test_compaction.py  test_context.py  test_events.py  test_multimodal.py  test_provider.py  test_replay.py  test_runner.py
tests/mcp/: test_mcp.py
tests/meta/: test_performance_paths.py
tests/sessions/: test_jsonl_session.py  test_session_fixtures.py
tests/status/: test_status.py
tests/subagents/: test_subagents.py
tests/tools/: conftest.py  test_shell_utils.py  test_tools.py  tool_harness.py
tests/usage/: test_usage.py
(+669 files in other folders)
