[project]
name = "Deepy"
version = "0.1.0"
description = "Deepy - Vibe coding for DeepSeek models in your terminal"
readme = "README.md"
authors = [
    { name = "kirineko", email = "kirineko@qq.com" }
]
requires-python = ">=3.12"
dependencies = [
    "openai-agents>=0.17.0",
    "openai>=2.26,<3",
    "pydantic>=2.12,<3",
    "prompt-toolkit>=3.0,<4",
    "rich>=13.9,<15",
    "tomli-w>=1",
]

[project.scripts]
deepy = "deepy.cli:main"

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.14",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
exclude = ["dist", "reference", "spec"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "off"
include = ["src", "tests"]
exclude = ["dist", "reference", "spec"]
reportMissingTypeStubs = false

[build-system]
requires = ["uv_build>=0.11.10,<0.12.0"]
build-backend = "uv_build"
