[project]
name = "deepy-cli"
version = "0.2.9"
description = "Deepy - Vibe coding for DeepSeek models in your terminal"
readme = "README.md"
authors = [
    { name = "kirineko", email = "kirineko@qq.com" }
]
requires-python = ">=3.12"
keywords = ["deepseek", "coding-agent", "terminal", "cli", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Terminals",
]
dependencies = [
    "openai-agents>=0.17.0",
    "openai>=2.26,<3",
    "orjson>=3.10,<4",
    "pydantic>=2.12,<3",
    "prompt-toolkit>=3.0,<4",
    "pyyaml>=6.0,<7",
    "rich>=14.2,<15",
    "textual>=8.2,<9",
    "tiktoken>=0.9,<1",
    "tomli-w>=1",
]

[project.scripts]
deepy = "deepy.cli:main"

[project.urls]
Homepage = "https://kirineko.github.io/deepy/"
Repository = "https://github.com/kirineko/deepy"
Issues = "https://github.com/kirineko/deepy/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.14",
    "ty>=0.0.32",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
exclude = ["dist", "reference", "spec"]

[tool.uv.build-backend]
module-name = "deepy"

[build-system]
requires = ["uv_build>=0.11.10,<0.12.0"]
build-backend = "uv_build"
